Rework without voice (#230)
* Working on version 2.0.0

* introduced new entity builder

also bumped license year

* Added Member entity builder

* Adding support for virtual threads

* Need to work on guild next

* Improved entity to string builder and reduced some clutter

* Added some more entities

* Continued to switch to virtual threads

Also removed deprected use in gradle

* need to work on interaction next

* Now need to implement entite builders

* Added new ConcurrentCache and deprecated PerpetualCache

* introduced new ToStringEntity interface

* Now testing emeds

* added entity bulder for channel

* Working on channels now

* Almost finished reowrking channel entites

* working on new rest system

* migrating to new rest api system

* Mirgated all of RestApiManagerImpl

* remove okHttp import

* start migrating body system

* Finished migrating rest api and made all impls internal

* Added embed utils

* A lot of changes and lot more rework needd

* Added KDoc to RestResult

* Fixed some errors

* got a lot left

* Got like 20 more

* Interactions left

* A lot of rewriting to do

* some interactions left but left for rebuild

* update java version for workflows

* Fixed some errors

* tests are failing

* Need more work on select menu for interactions

* A revamp of the full interaction system is required

in progress

* A lot left to do

* now need to sort out the implementations and the interactions

* more work on interaction system

* adding impls for interactions

* added a new way to call events

* spotless apply

* fixed some errors

* bump gradle version and siabled codeql for now

* updated enum entires

* errors should be fixed now

* squashed a few issues

* switched to defualt

* voice

* Revert "voice"

This reverts commit c6b1780ecd0000ee22b811e3bfad47b925acffca.

* loads keft

* slash command work

* moving away from hardcodin